--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#f0f4c3"
-    tools:context=".ForgotPasswordActivity">
+    tools:context=".activities.ForgotPasswordActivity">
 
     <ImageView
         android:id="@+id/imgForgotPwdChakra"
