--- a/app/src/main/res/layout/activity_forgot_password_details.xml
+++ b/app/src/main/res/layout/activity_forgot_password_details.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ForgotPasswordDetailsActivity"
+    tools:context=".activities.ForgotPasswordDetailsActivity"
     android:background="#f0f4c3">
 
     <TextView
