SQLite database added, users can now register themselves! =)

--- a/app/src/main/res/layout/activity_forgot_password.xml
+++ b/app/src/main/res/layout/activity_forgot_password.xml
@@ -7,6 +7,23 @@
     android:background="#f0f4c3"
     tools:context=".activities.ForgotPasswordActivity">
 
+    <com.google.android.material.appbar.AppBarLayout
+        android:id="@+id/appBarPwd1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:elevation="0dp"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark">
+
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/pwdToolbar1"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimary"
+            android:minHeight="?attr/actionBarSize"
+            app:layout_scrollFlags="scroll|enterAlways" />
+
+    </com.google.android.material.appbar.AppBarLayout>
+
     <ImageView
         android:id="@+id/imgForgotPwdChakra"
         android:layout_width="150dp"
@@ -14,7 +31,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="80dp"
         android:layout_marginBottom="20dp"
-        android:src="@drawable/splash_chakra" />
+        android:src="@drawable/ic_food_icon"
+        android:layout_below="@id/appBarPwd1"/>
 
     <TextView
         android:id="@+id/txtForgotPwd"
@@ -36,7 +54,9 @@
         android:layout_marginVertical="10dp"
         android:hint="Mobile Number (10 digits)"
         android:inputType="number"
-        android:maxLength="10"/>
+        android:maxLength="10"
+        android:backgroundTint="@color/colorPrimary"
+        android:textColorHint="@color/colorPrimary"/>
 
     <EditText
         android:id="@+id/txtForgotPwdMail"
@@ -44,7 +64,9 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/txtForgotPwdNumber"
         android:layout_marginHorizontal="20dp"
-        android:hint="Email Address" />
+        android:hint="Email Address"
+        android:backgroundTint="@color/colorPrimary"
+        android:textColorHint="@color/colorPrimary"/>
 
     <Button
         android:id="@+id/btnForgotSubmit"
