--- a/app/src/main/res/layout/drawer_header.xml
+++ b/app/src/main/res/layout/drawer_header.xml
@@ -3,7 +3,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="250dp"
-    android:background="@color/bgdColor">
+    android:background="@color/colorPrimary">
 
     <ImageView
         android:layout_width="100dp"
