--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -43,10 +43,12 @@
         android:layout_marginTop="30dp"
         android:hint="@string/phone_number_hint"
         android:inputType="phone"
+        android:textColorHint="@color/colorPrimary"
         android:maxLength="10"
         android:maxLines="1"
         android:padding="8dp"
-        tools:ignore="TextViewEdits" />
+        tools:ignore="TextViewEdits"
+        android:backgroundTint="@color/colorPrimary"/>
 
     <EditText
         android:id="@+id/etPwd"
@@ -57,9 +59,11 @@
         android:layout_marginTop="10dp"
         android:hint="@string/password_hint"
         android:inputType="textPassword"
+        android:textColorHint="@color/colorPrimary"
         android:maxLines="1"
         android:padding="8dp"
-        tools:ignore="TextViewEdits" />
+        tools:ignore="TextViewEdits"
+        android:backgroundTint="@color/colorPrimary"/>
 
     <Button
         android:id="@+id/btnLogIn"
