All the features have almost been implemented! =)

--- a/app/src/main/res/layout/single_row_layout_restaurant.xml
+++ b/app/src/main/res/layout/single_row_layout_restaurant.xml
@@ -63,9 +63,9 @@
                 android:layout_below="@id/rowName"
                 android:textSize="16sp"
                 android:textStyle="bold"
-                android:text="300/person"
+                android:text="300"
                 android:padding="2dp"
-                android:layout_marginHorizontal="2dp"/>
+                android:layout_marginLeft="2dp"/>
 
         </RelativeLayout>
 
